helm/apps/jellyfin/service-direct.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-direct
  namespace: jellyfin
  annotations:
    metallb.universe.tf/address-pool: homelab-pool
    metallb.universe.tf/loadBalancerIPs: 192.168.0.128
spec:
  type: LoadBalancer
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: 8096
    - name: discovery
      port: 7359
      targetPort: 7359
      protocol: UDP
