helm/apps/jellyfin/service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-web
  namespace: jellyfin
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: 8096
