helm/apps/jellyfin/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.kds-dev.com`)
      kind: Rule
      services:
        - name: jellyfin-web
          port: 8096
  tls: {}
